Slightly improve labels & fix horizontal scroll bar
(cherry picked from commit 5321554467f274a84e47c2037713cbd84969db55)

--- a/Dashboard/src/app/pages/playground-page/playground-page.component.scss
+++ b/Dashboard/src/app/pages/playground-page/playground-page.component.scss
@@ -55,6 +55,7 @@ p {
     }
 
     .top-bar {
+        box-sizing: border-box;
         width: 100%;
         height: 2.5em;
         max-height: 2.5em;
